# neural-mac-win-app

./: .gitignore  AGENT.md  AGENT_PROD.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agent.md  docker-compose.cluster.yml  docker-compose.yml  neuralclaw-sidecar-x86_64-pc-windows-msvc.spec  pyproject.toml  setup.bat  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  desktop-release.yml  publish.yml
desktop/: ARCHITECTURE.md  DEVELOPMENT.md  README.md  index.html  package.json  vite.config.ts
desktop/scripts/: build-release.mjs  build-sidecar-win.ps1  build-sidecar.sh  smoke-release-win.ps1
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: avatar.rs  chat_sessions.rs  commands.rs  lib.rs  main.rs  sidecar.rs  store.rs  tray.rs
desktop/src/avatar/: AvatarChatOverlay.tsx  AvatarScene.tsx  AvatarWindow.tsx  VRMAvatar.tsx  useAvatarState.ts
desktop/src/components/: CommandPalette.tsx
desktop/src/hooks/: useBackend.ts  useChat.ts  useConfig.ts  useHealth.ts
desktop/src/lib/: api.ts  autonomy.ts  constants.ts  models.ts  persistence.ts  theme.ts  voiceAssistant.ts  ws.ts
desktop/src/store/: agentStore.ts  appStore.ts  chatStore.ts  taskStore.ts  wizardStore.ts
desktop/src/views/: AboutPage.tsx  AgentsPage.tsx  ChatPage.tsx  ConnectionsPage.tsx  DashboardPage.tsx  DatabasePage.tsx  KnowledgePage.tsx  LockView.tsx  MemoryPage.tsx  SettingsPage.tsx  TasksPage.tsx  WorkflowPage.tsx  WorkspacePage.tsx
desktop/src/wizard/: Step1Welcome.tsx  Step2Providers.tsx  Step3ApiKey.tsx  Step4ModelPick.tsx  Step5Channels.tsx  Step6Features.tsx  Step7Summary.tsx  WizardShell.tsx
docs/: README.md  agent-implementation-notes.md  alerts.yaml  api-reference.md  architecture.md  channels.md  configuration.md  deployment-pi5.md  deployment-tailscale-cluster.md  deployment-vps.md  deployment-workstation.md  evolution.md  federation.md  getting-started.md  memory.md  metrics.md  reasoning.md  runbooks.md  security.md  skills.md  swarm.md  troubleshooting.md  tutorial-cookbook.md
docs/cookbook/: 01-first-telegram-bot.md  02-discord-bot-with-memory.md  03-whatsapp-business-agent.md  04-personal-ai-on-pi5.md  05-multi-agent-research-crew.md  06-computer-use-automation.md  07-google-workspace-assistant.md  08-claw-club-saas-setup.md  09-custom-skill-in-10-minutes.md  10-production-deployment-vps.md
neuralclaw/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  configurator.py  dashboard.py  errors.py  gateway.py  health.py  mcp_server.py  migrate.py  service.py
neuralclaw-0.5.3/neuralclaw/: dashboard.py
neuralclaw-0.5.3/neuralclaw/skills/: __init__.py
neuralclaw-1.0.1/tests/: test_integration_matrix.py
neuralclaw/bus/: __init__.py  neural_bus.py  telemetry.py
neuralclaw/channels/: __init__.py  discord_adapter.py  protocol.py  rate_limiter.py  signal_adapter.py  slack.py  telegram.py  trust.py  web.py  whatsapp.py  whatsapp_baileys.py
neuralclaw/cortex/: __init__.py
neuralclaw/cortex/action/: __init__.py  audit.py  browser.py  capabilities.py  desktop.py  idempotency.py  network.py  param_validator.py  policy.py  sandbox.py
neuralclaw/cortex/adaptive/: __init__.py  compensating.py  contracts.py  control_plane.py  intent.py  multimodal.py  multimodal_processing.py  scheduler.py  sharing.py  style.py  teaching.py
neuralclaw/cortex/evolution/: __init__.py  calibrator.py  distiller.py  orchestrator.py  synthesizer.py
neuralclaw/cortex/memory/: __init__.py  db.py  episodic.py  identity.py  knowledge_base.py  metabolism.py  procedural.py  retrieval.py  semantic.py  shared.py  vector.py
neuralclaw/cortex/observability/: __init__.py  traceline.py
neuralclaw/cortex/perception/: __init__.py  classifier.py  intake.py  output_filter.py  threat_screen.py  vision.py
neuralclaw/cortex/reasoning/: checkpoint.py  deliberate.py  fast_path.py  meta.py  reflective.py  structured.py  workflow.py
neuralclaw/providers/: __init__.py  anthropic.py  app_session.py  chatgpt_token.py  circuit_breaker.py  claude_token.py  local.py  openai.py  openrouter.py  proxy.py  role_router.py  router.py
neuralclaw/security/: __init__.py  redaction.py
neuralclaw/session/: __init__.py  auth.py  runtime.py
neuralclaw/skills/: economy.py  federation.py  forge.py  forge_handlers.py  graph.py  hot_loader.py  loader.py  manifest.py  marketplace.py  paths.py  registry.py  scout.py  scout_handlers.py
neuralclaw/skills/builtins/: __init__.py  _registry.py  agent_orchestration.py  api_client.py  app_builder.py  calendar_skill.py  clipboard_intel.py  code_exec.py  context_aware.py  database_bi.py  (+18 more)
neuralclaw/swarm/: __init__.py  agent_runtime.py  agent_store.py  consensus.py  delegation.py  federation.py  mesh.py  spawn.py  task_store.py  workspace_coordinator.py
scratch/: test_memory.db-shm  test_memory.db-wal
tests/: conftest.py  test_a2a.py  test_adversarial.py  test_agent_orchestration_skill.py  test_anthropic_tools.py  test_api_client.py  test_app_builder.py  test_audit_replay.py  test_auth.py  test_browser.py  test_channel_trust.py  test_config_validation.py  test_dashboard_config.py  test_delegation.py  test_desktop.py  test_evolution_orchestrator.py  test_evolution_security_swarm.py  test_federation_spawn.py  test_github_repos.py  test_golden_traces.py  test_google_workspace.py  test_health.py  test_identity.py  test_integration_matrix.py  test_knowledge_base.py  test_load.py  test_mcp_server.py  test_memory.py  test_microsoft365.py  test_output_filter.py  test_parallel_tools.py  test_perception.py  test_provider_catalog_and_media.py  test_provider_router_prod.py  test_proxy_provider.py  test_proxy_setup.py  test_repo_exec.py  test_runbooks.py  test_sandbox_policy.py  test_service.py  (+14 more)
tests/chaos/: harness.py
tests/golden/: simple_chat.json  trace_001_greeting.json  trace_002_tool_use.json  trace_003_memory_recall.json  trace_004_reflective.json  trace_005_security_block.json
tmp/pdfs/: generate_app_summary_pdf.py
(+13 files in other folders)
