[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralclaw"
version = "1.2.6"
description = "The Self-Evolving Cognitive Agent Framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Mirac", email = "mirac@cardify.dev"},
]
keywords = [
    "ai", "agent", "cognitive", "autonomous", "llm",
    "self-evolving", "multi-channel", "framework",
    "computer-use", "desktop-control", "vision",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "toml>=0.10",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "watchfiles>=0.22",
    "pydantic>=2.0",
    "keyring>=25.0",
    "playwright>=1.52",
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "slack-bolt>=1.18",
    "qrcode>=7.4",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3"]
slack = ["slack-bolt>=1.18"]
whatsapp = ["qrcode>=7.4"]
sessions = ["playwright>=1.52"]
all-channels = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "slack-bolt>=1.18",
    "qrcode>=7.4",
]
vector = ["sqlite-vec>=0.1"]
desktop = ["mss>=9.0", "pyautogui>=0.9", "pillow>=10.0"]
browser = ["playwright>=1.52"]
voice = ["edge-tts>=6.1", "ffmpeg-python>=0.2", "PyNaCl>=1.5"]
google = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.2", "google-auth-httplib2>=0.2"]
microsoft = ["msal>=1.30"]
tray = ["pystray>=0.19", "pillow>=10.0"]
all = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "slack-bolt>=1.18",
    "playwright>=1.52",
    "sqlite-vec>=0.1",
    "mss>=9.0",
    "pyautogui>=0.9",
    "pillow>=10.0",
    "edge-tts>=6.1",
    "ffmpeg-python>=0.2",
    "PyNaCl>=1.5",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "msal>=1.30",
    "pystray>=0.19",
]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/placeparks/neuralclaw"
Repository = "https://github.com/placeparks/neuralclaw"
Issues = "https://github.com/placeparks/neuralclaw/issues"
Documentation = "https://github.com/placeparks/neuralclaw/tree/main/docs"
Changelog = "https://github.com/placeparks/neuralclaw/blob/main/CHANGELOG.md"

[project.scripts]
neuralclaw = "neuralclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuralclaw*"]

[tool.setuptools.package-data]
neuralclaw = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: slower concurrency and integration checks",
    "chaos: fault-injection coverage",
]
