[package]
name = "neuralclaw-desktop"
version = "1.0.0"
description = "NeuralClaw Desktop — The Self-Evolving AI Assistant"
authors = ["Mirac <mirac@cardify.dev>"]
edition = "2021"

[lib]
name = "neuralclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
